# aprs_lab_sim

./: README.md
aprs_description/: CMakeLists.txt  README.md  package.xml
aprs_description/config/: fanuc_initial_positions.yaml  franka_initial_positions.yaml  motoman_initial_positions.yaml  robot_controllers.yaml  ur_initial_positions.yaml
aprs_description/hooks/: aprs_description.dsv.in  aprs_description.sh.in
aprs_description/urdf/: aprs_fanuc.urdf.xacro  aprs_franka.urdf.xacro  aprs_lab_robots.urdf.xacro  aprs_motoman.urdf.xacro  aprs_ur.urdf.xacro
aprs_description/urdf/fanuc/: aprs_fanuc.ros2_control.xacro  aprs_fanuc_macro.xacro  fanuc_lrmate200id_macro.xacro
aprs_description/urdf/franka/: aprs_franka.ros2_control.xacro  aprs_franka_macro.xacro  franka_arm.xacro  franka_hand.xacro  utils.xacro
aprs_description/urdf/motoman/: aprs_motoman.ros2_control.xacro  aprs_motoman_macro.xacro  motoman_common.xacro  motoman_sia20_macro.xacro
aprs_description/urdf/ur/: aprs_ur.ros2_control.xacro  aprs_ur_macro.xacro
aprs_description/urdf/vacuum_gripper/: vacuum_gripper_macro.xacro
aprs_gz_plugins/: CMakeLists.txt  package.xml
aprs_gz_plugins/hooks/: aprs_gz_plugins.dsv.in
aprs_gz_plugins/include/aprs_plugins/: conveyor_plugin.hpp  gear_plugin.hpp  spawn_part.hpp
aprs_gz_plugins/src/: conveyor_plugin.cpp  gear_plugin.cpp  spawn_part.cpp
aprs_gz_sim/: CMakeLists.txt  package.xml
aprs_gz_sim/aprs_gz_sim/: evironment_startup.py  spawn_params.py  utils.py
aprs_gz_sim/gz_models/conveyor_belt/: model.config  model.sdf
aprs_gz_sim/gz_models/demo_parts/large_gear/: model.config  model.sdf
aprs_gz_sim/gz_models/demo_parts/large_gear/meshes/: large_gear_assembled.stl  large_gear_simplified.stl
aprs_gz_sim/gz_models/demo_parts/large_gear_tray/: model.config  model.sdf
aprs_gz_sim/gz_models/demo_parts/m2l1_kit_tray/: model.config  model.sdf
aprs_gz_sim/gz_models/demo_parts/medium_gear/: model.config  model.sdf
aprs_gz_sim/gz_models/demo_parts/medium_gear/meshes/: medium_gear_assembled.stl
aprs_gz_sim/gz_models/demo_parts/medium_gear_tray/: model.config  model.sdf
aprs_gz_sim/gz_models/demo_parts/s2l2_kit_tray/: model.config  model.sdf
aprs_gz_sim/gz_models/demo_parts/small_gear/: model.config  model.sdf
aprs_gz_sim/gz_models/demo_parts/small_gear/meshes/: small_gear_assembled.stl
aprs_gz_sim/gz_models/demo_parts/small_gear_tray/: model.config  model.sdf
aprs_gz_sim/gz_models/franka_cart/: model.config  model.sdf
aprs_gz_sim/gz_models/light_bars/: model.config  model.sdf
aprs_gz_sim/gz_models/optical_table/: model.config  model.sdf
aprs_gz_sim/gz_models/teach_table/: model.config  model.sdf
aprs_gz_sim/gz_models/ur_cart/: model.config  model.sdf
aprs_gz_sim/gz_models/walls/: model.config  model.sdf
aprs_gz_sim/gz_models/work_area/: model.config  model.sdf
aprs_gz_sim/hooks/: aprs_gz_sim.dsv.in  aprs_gz_sim.sh.in
aprs_gz_sim/include/aprs_gz_sim/: spawn_part.hpp
aprs_gz_sim/launch/: combined_description.launch.py  environment.launch.py  seperate_description.launch.py
aprs_gz_sim/nodes/: clone_real_world_node.py  combined_load_controllers.py  dummy_motoman_joints_publisher.py  dummy_trays_publisher.py  environment_startup_node.py  seperate_load_controllers.py
aprs_gz_sim/src/: spawn_part.cpp
aprs_gz_sim/worlds/: lab.sdf  test.sdf
aprs_interfaces/: CMakeLists.txt  package.xml
aprs_interfaces/srv/: SpawnPart.srv  SpawnSensor.srv
docker/: Dockerfile
passthrough_controller/: CMakeLists.txt  package.xml  passthrough_controller.xml  setup_guide.md
passthrough_controller/config/: controller_config.yaml
passthrough_controller/include/passthrough_controller/: passthrough_controller.hpp
passthrough_controller/launch/: launch_file.py
passthrough_controller/src/: passthrough_controller.cpp  passthrough_controller_parameters.yaml
