<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aprs_gz_sim</name>
  <version>2024.4.0</version>
  <description>APRS gz sim</description>
  <maintainer email="joseph.fernandez@nist.gov">Joseph Fernandez</maintainer>
  <license>NIST</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <depend>aprs_interfaces</depend>
  
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>gz_ros</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>