<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypus="urn:oasis:names:tc:entity:xmlns:xml:catalog"?>
<package format="3">
  <name>passthrough_controller</name>
  <version>1.0.0</version>
  <description>A ROS2 controller that passes through joint states from a real robot to a simulated robot</description>
  <maintainer email="joseph.fernandez@nist.gov">Joseph Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/passthrough_controller_plugin.xml"/>
  </export>
</package>